# subwasm

cli/: Cargo.toml
