[package]
name = "subwasm"
version = "0.9.0"
authors = ["chevdor <chevdor@gmail.com>", "Wilfried Kopp <wilfried@parity.io"]
edition = "2018"
license = "MIT"
description = "subwasm is a utility that works on WASM Runtime of Substrate based chains"
homepage = "https://github.com/chevdor/subwasm"
repository = "https://github.com/chevdor/subwasm"
readme = "README.md"
keywords = ["wasm", "cli", "substrate", "blockchain", "runtime", "polkadot", "kusama"]

[dependencies]
color-eyre = "0.5.11"
clap = "3.0.0-beta.2"
subwasmlib = { path = "../lib" }
wasm-testbed = { path = "../libs/wasm-testbed" }
wasm-loader = { path = "../libs/wasm-loader" }

# For the doc
substrate-runtime-proposal-hash = { path = "../libs/substrate-runtime-proposal-hash", optional = true }
assert_cmd = "1.0.4"
log = "0.4.14"
env_logger = "0.8.3"

[package.metadata.deb]
maintainer = "Wilfried Kopp aka. Chevdor <chevdor@gmail.com>"
copyright = "2021, Wilfried Kopp aka. Chevdor <chevdor@gmail.com>"
license-file = ["LICENSE", "0"]
extended-description = """\
A cli utility to work with Substrate WASM Runtime."""
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
    ["target/release/subwasm", "usr/bin/", "755"],
]
